# SuperMario

./: .gitignore  CMakeLists.txt  README.md
src/: component.h  eNtity.h  entity.c  main.c
src/component/: component.h
src/entity/: coin.c  coin.h  enemy.c  enemy.h  entity.c  entity.h  fireball.c  fireball.h  fireflower.c  fireflower.h  mushroom.c  mushroom.h  player.c  player.h  pyro.c  pyro.h
src/game/: game.c  game.h  level.c  level.h
src/graphic/: map.c  map.h  sprite.c  sprite.h  texture.c  texture.h  tile.c  tile.h
src/sprite/: sprite.c  sprite.h
src/system/: collision.c  collision.h  system.c  system.h
